fixed input padding issue after 650width and change gap in right header section

--- a/public/src/components/Header/Header.module.css
+++ b/public/src/components/Header/Header.module.css
@@ -110,11 +110,24 @@
 }
 
 @media (max-width: 960px) {
+  .login {
+    padding: 7px 7px;
+  }
+
   .menu-icon {
     display: flex;
   }
 
   .plus-icon {
     display: flex;
+  }
+}
+
+@media (max-width: 320px) {
+  .login p {
+    display: none;
+  }
+  .right-section {
+    gap: 8px;
   }
 }
