--- a/public/src/components/InputSection/InputSection.module.css
+++ b/public/src/components/InputSection/InputSection.module.css
@@ -76,7 +76,7 @@
 @media (max-width: 680px) {
   .input-main {
     bottom: -4px;
-    padding: 15px 10px 15px;
+    padding: 15px 20px 15px;
   }
 }
 
